Update text in index.html for clarity

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
         <div class="heart">❤️</div>
         <p>Well done for not saying no it was really an option</p>
         <p>Love you lots my princess💖</p>
-        <p>Can't wait probably have chipotle or sit and watch sopranos with a takeaway!</p>
+        <p>Can't wait to probably have chipotle or sit and watch sopranos with a home cooked 3 course!</p>
         <p style="font-size: 2em; margin-top: 20px;">❤️ Forever Yours ❤️</p>
     </div>
 
